added css to first article

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <title>Hacker Times</title>
 </head>
 <body>
@@ -16,16 +17,18 @@
     </header>
     <!-- navigation -->
     <nav>
-      <ul>
-        <li><a href="#">HTML & CSS</a></li>
-        <li><a href="#">UX & UI</a></li>
-        <li><a href="#">JAVASCRIPT</a></li>
-        <li><a href="#">EXPRESS</a></li>
-        <li><a href="#">MONGODB</a></li>
-        <li><a href="#">REACT</a></li>
-        <li><a href="#">CYBERSECURITY</a></li>
-        <li><a href="#">PYTHON</a></li>
-      </ul>
+      <div class="first-article">
+        <ul>
+          <li><a href="#">HTML & CSS</a></li>
+          <li><a href="#">UX & UI</a></li>
+          <li><a href="#">JAVASCRIPT</a></li>
+          <li><a href="#">EXPRESS</a></li>
+          <li><a href="#">MONGODB</a></li>
+          <li><a href="#">REACT</a></li>
+          <li><a href="#">CYBERSECURITY</a></li>
+          <li><a href="#">PYTHON</a></li>
+        </ul>
+      </div>
     </nav>
     <!-- front page article -->
     <main>
